--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   "@type": "Organization",
   "name": "DIMProductions",
   "url": "https://dim.productions/",
-  "logo": "https://dim.productions/logo.png",
+  "logo": "https://dim.productions/assets/pic/logo.svg",
   "description": "Plugin & game SFX studio in Tokyo. Featured work: Piano Virtuoso 18.",
   "foundingLocation": "Tokyo, Japan"
 }
