--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <meta name="description" content="DIMProductions — Plugin & game SFX studio in Tokyo. Featured work: Piano Virtuoso 18." />
 <link rel="preload" as="font" href="/assets/fonts/Jacquard12-pv18.woff2" type="font/woff2" crossorigin>
 <link rel="preload" as="font" href="/assets/fonts/DIMProductions.woff2"   type="font/woff2" crossorigin>
-<link rel="canonical" href="https://dim.productions/" />
+<link rel="canonical" href="https://dim.productions" />
+<link rel="icon" type="image/svg+xml" href="/assets/pic/favicon.svg">
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="DIMProductions" />
 <meta property="og:title" content="DIMProductions" />
 <meta property="og:description" content="Plugin & game SFX studio in Tokyo. Featured work: Piano Virtuoso 18." />
-<meta property="og:url" content="https://dim.productions/" />
+<meta property="og:url" content="https://dim.productions" />
 <meta property="og:image" content="https://dim.productions/og-image.jpg" />
 <meta property="og:locale" content="ja_JP" />
 <meta name="twitter:card" content="summary_large_image" />
@@ -239,7 +240,7 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "DIMProductions",
-  "url": "https://dim.productions/",
+  "url": "https://dim.productions",
   "logo": "https://dim.productions/assets/pic/logo.svg",
   "description": "Plugin & game SFX studio in Tokyo. Featured work: Piano Virtuoso 18.",
   "foundingLocation": "Tokyo, Japan"
