--- a/about.html
+++ b/about.html
@@ -51,11 +51,11 @@
   <main class="wrap">
     <section class="card" aria-labelledby="brand">
       <h1 id="brand" class="brand">DIMP</h1>
-      <p class="tag">This is the official About page for DIMProductions Godo Kaisha (Tokyo, Japan). The company is currently preparing for product and service launches.</p>
+      <p class="tag">This is the official About page for DIMProductions GK (Tokyo, Japan). The company is currently preparing for product and service launches.</p>
       <dl class="grid">
         <div class="row">
           <dt>会社名 / Company</dt>
-          <dd>合同会社DIMProductions（DIMProductions Godo Kaisha）</dd>
+          <dd>合同会社DIMProductions（DIMProductions GK）</dd>
         </div>
         <div class="row">
           <dt>所在地 / Address</dt>
